# bcch-sdk

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/agents/: commit-helper.agent.md
.github/workflows/: ci.yml  mkdocs.yml  publish.yml
api_reference/: index.html
architecture/: index.html
comparison/: index.html
comparison_detailed/: index.html
dataframes/: index.html
developer_guide/: index.html
docs/: api_reference.md  architecture.md  comparison.md  comparison_detailed.md  dataframes.md  developer_guide.md  index.md  migration.md  quickstart.md  release_checklist.md  roadmap.md  usage.md
migration/: index.html
quickstart/: index.html
release_checklist/: index.html
roadmap/: index.html
search/: search_index.json
src/: __init__.py  concurrency.py
src/bcch_sdk/: __init__.py  _version.py  exceptions.py
src/bcch_sdk/builders/: date.py  parameters.py  time_series.py
src/bcch_sdk/clients/: __init__.py  async_client.py  sync_client.py
src/bcch_sdk/clients/base/: async_client.py  client.py  sync_client.py
src/bcch_sdk/dto/: observation_series.py  series.py  series_information.py  web_service.py
src/bcch_sdk/mappers/: credentials.py  observations_series.py  series.py  series_information.py  web_service.py
src/bcch_sdk/models/: __init__.py  series_information.py  web_service.py
src/bcch_sdk/sdk/: __init__.py  async_sdk.py
src/bcch_sdk/sdk/base/: async_sdk.py  sdk.py  sync_sdk.py
src/bcch_sdk/types/: __init__.py  auth.py  parameters.py
src/builders/: date.py  parameters.py  time_series.py
src/clients/: async_client.py  base.py  base_async.py  base_sync.py  sync_client.py
src/clients/base/: client.py
src/dto/: series.py  series_information.py  web_service.py
src/mappers/: credentials.py  dataframe.py  observations_series.py  series.py  series_information.py  web_service.py
src/models/: observation_series.py  series.py  series_information.py  web_service.py
src/sdk/: async_sdk.py  base.py  sync_sdk.py
src/types/: client.py  config.py  core.py  enums.py
tests/: factories.py  test_clients.py  test_dataframe_mapper.py  test_exceptions.py  test_public_api.py  test_sdk.py  test_web_service_response_mapper.py
tests/benchmarks/: test_concurrency.py  test_dataframe.py  test_mapper.py  test_memory.py  test_request.py
usage/: index.html
