[project]
name = "banco-central-chile-sdk"
version = "0.1.0"
description = ""
authors = [
    {name = "Eli-ezer Reuven Ramirez Ruiz",email = "ramirez.ruiz.eliezer.reuven@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp (>=3.14.1,<4.0.0)",
    "httpx[brotli,zstd] (>=0.28.1,<0.29.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "aioresponses (>=0.7.9,<0.8.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "polars (>=1.42.1,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "httpx-retries (>=0.6.0,<0.7.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
