[project]
name = "bcch-sdk"
version = "0.3.0"
description = "Python SDK for the Banco Central de Chile SieteRestWS API."
authors = [
    {name = "Eli-ezer Reuven Ramirez Ruiz",email = "ramirez.ruiz.eliezer.reuven@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[brotli,zstd] (>=0.28.1,<0.29.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "polars (>=1.42.1,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "httpx-retries (>=0.6.0,<0.7.0)",
]

[tool.poetry]
packages = [{ include = "bcch_sdk", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.20,<0.16.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=1.4.0,<2.0.0"
pytest-benchmark = ">=5.2.3,<6.0.0"
respx = ">=0.23.1,<0.24.0"
aioresponses = ">=0.7.9,<0.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.1,<2.0.0"

[tool.pytest.ini_options]
addopts = "-m 'not benchmark'"
markers = [
    "benchmark: performance and memory benchmarks excluded from the default test run",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
