[project]
name = "bcch-sdk"
version = "0.7.0"
description = "Python SDK for the Banco Central de Chile SieteRestWS API."
authors = [
    {name = "Eli-ezer Reuven Ramirez Ruiz",email = "ramirez.ruiz.eliezer.reuven@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = [
    "banco-central-chile",
    "bcch",
    "central-bank",
    "economic-data",
    "siete",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx[brotli,zstd] (>=0.28.1,<0.29.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "polars (>=1.42.1,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "httpx-retries (>=0.6.0,<0.7.0)",
]

[project.urls]
Homepage = "https://github.com/ezer-mackenzie/bank-central-chile-sdk"
Documentation = "https://ezer-mackenzie.github.io/bank-central-chile-sdk/"
Repository = "https://github.com/ezer-mackenzie/bank-central-chile-sdk"
Issues = "https://github.com/ezer-mackenzie/bank-central-chile-sdk/issues"
Changelog = "https://github.com/ezer-mackenzie/bank-central-chile-sdk/blob/main/CHANGELOG.md"

[tool.poetry]
packages = [{ include = "bcch_sdk", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.20,<0.16.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=1.4.0,<2.0.0"
pytest-benchmark = ">=5.2.3,<6.0.0"
respx = ">=0.23.1,<0.24.0"
aioresponses = ">=0.7.9,<0.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.1,<2.0.0"

[tool.pytest.ini_options]
addopts = "-m 'not benchmark'"
markers = [
    "benchmark: performance and memory benchmarks excluded from the default test run",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
